syntax = "proto3";
option java_multiple_files = true;
package org.appMain;

message ProtoOrder {
  string id = 1;
  string customerId = 2;
  int64 price = 3;
}

message ProtoOrderedProduct{
  string productId = 1;
  string orderId = 2;
}

message ProtoProductOrder {
  string productId = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
  bool isForAdult = 5;
}

message ProtoCustomerOrder {
  string customerId = 1;
  string firstName = 2;
  string lastName = 3;
  int32 age = 4;
}

message ProtoSeller {
  string firstName = 1;
  string lastName = 2;
}

message GetRequestOrder{
}

message GetResponseOrder {
  repeated ProtoOrder order = 1;
}

message GetRequestOrderedProduct{
}

message GetResponseOrderedProduct {
  repeated ProtoOrderedProduct orderedProducts = 1;
}

message CreateOrderRequest{
  ProtoSeller seller = 1;
  ProtoCustomerOrder customer = 2;
  repeated ProtoProductOrder products = 3;
}

message CreateOrderResponse {
}

service orderService {
  rpc getOrders(GetRequestOrder) returns (GetResponseOrder);
  rpc getOrderedThing(GetRequestOrderedProduct) returns (GetResponseOrderedProduct);
  rpc create(CreateOrderRequest) returns (CreateOrderResponse);
}